@@ -17,23 +17,24 @@ function map:on_started()
   hole:set_modified_ground("hole")
 
   -- Hole overlapping both the hero's origin point and his ground point.
-  local hero_ground_x, hero_ground_y = hero:get_ground_position()
+  local hero_ground_x, hero_ground_y, hero_ground_layer = hero:get_ground_position()
   assert(hero_ground_x == hero_x)
   assert(hero_ground_y == hero_y - 2)
+  assert(hero_ground_layer == hero_layer)
   assert(map:get_ground(hero_x, hero_y, hero_layer) == "hole")
-  assert(map:get_ground(hero_ground_x, hero_ground_y, hero_layer) == "hole")
+  assert(map:get_ground(hero_ground_x, hero_ground_y, hero_ground_layer) == "hole")
   assert(hero:get_ground_below() == "hole")
 
   -- Hole overlapping the hero's origin point but not his ground point.
   hole:set_position(hero_x, hero_y + 12)
   assert(map:get_ground(hero_x, hero_y, hero_layer) == "hole")
-  assert(map:get_ground(hero_ground_x, hero_ground_y, hero_layer) == "traversable")
+  assert(map:get_ground(hero_ground_x, hero_ground_y, hero_ground_layer) == "traversable")
   assert(hero:get_ground_below() == "traversable")
 
   -- Hole overlapping the hero's ground point but not his origin point.
   hole:set_position(hero_x, hero_y - 4)
   assert(map:get_ground(hero_x, hero_y, hero_layer) == "traversable")
-  assert(map:get_ground(hero_ground_x, hero_ground_y, hero_layer) == "hole")
+  assert(map:get_ground(hero_ground_x, hero_ground_y, hero_ground_layer) == "hole")
   assert(hero:get_ground_below() == "hole")
 
   -- Also check an entity that is not a ground observer.
